# envi

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  main.rs
src/file_parser/: json.rs  mod.rs  toml.rs  yaml.rs
tests/: integration.rs
tests/data/: envi.json  envi.toml  envi.yml
